Fix: style custom btn apple letter-spacing

--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ ul {
     border-radius: 30px;
     margin-top: 2rem;
     cursor: pointer;
+    letter-spacing: 3px;
 }
 
 .fa-file-code,
